creusot/tests/should_fail/prusti/deref/expired1.stderr
error[creusot]: invalid shr dereference of expression with home `'old` and lifetime `'curr` at time-slice `'a`
 --> expired1.rs:4:21
  |
4 | #[after_expiry('a, *x == 0u32)]
  |                     ^

error: aborting due to previous error

